--- a/css/style.css
+++ b/css/style.css
@@ -317,3 +317,9 @@ ul.nav.navbar-nav  li {
 .footer. nav.navbar-nav{
     display:inline-block;
 }
+
+/*@media screen and (min-width: 1200px){*/
+    /*#project4.header_title{*/
+        /*margin-top: 130px;*/
+    /*}*/
+/*}*/
